Tidy up commit of fitted_lavaan.R for PR#25

--- a/semTools/NAMESPACE
+++ b/semTools/NAMESPACE
@@ -119,7 +119,6 @@ importFrom(lavaan,lavaan)
 importFrom(lavaan,lavaanList)
 importFrom(lavaan,lavaanify)
 importFrom(lavaan,parTable)
-importFrom(lavaan,stats)
 importFrom(methods,as)
 importFrom(methods,getMethod)
 importFrom(methods,hasArg)
@@ -129,7 +128,9 @@ importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,show)
 importFrom(methods,slot)
+importFrom(stats,aggregate)
 importFrom(stats,anova)
+importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cov)
@@ -139,6 +140,7 @@ importFrom(stats,factanal)
 importFrom(stats,fitted)
 importFrom(stats,fitted.values)
 importFrom(stats,lm)
+importFrom(stats,model.matrix)
 importFrom(stats,nlminb)
 importFrom(stats,nobs)
 importFrom(stats,pchisq)
